fixtures/cs-hash-02/good/no-password-context.ts
import bcrypt from "bcrypt";

export function deriveApiKey(apiKey: string) {
	return bcrypt.hashSync(apiKey, 4);
}
